--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,18 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+package-lock.json
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -86,6 +98,7 @@ web_modules/
 # Next.js build output
 .next
 out
+
 
 # Nuxt.js build / generate output
 .nuxt
