--- a/context_script/package.json
+++ b/context_script/package.json
@@ -42,12 +42,19 @@
     "@emotion/styled": "^11.10.6",
     "@google-cloud/translate": "^7.1.0",
     "@google-cloud/vision": "^3.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/chrome": "^0.0.217",
+    "@types/react-redux": "^7.1.25",
     "esbuild": "0.17.10",
     "framer-motion": "^10.9.1",
+    "is-port-reachable": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-frame-component": "^5.2.6",
+    "react-icons": "^4.9.0",
+    "react-redux": "^8.0.7",
+    "react-transition-group": "^4.4.5",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
