--- a/service_worker/package.json
+++ b/service_worker/package.json
@@ -42,14 +42,19 @@
     "@chakra-ui/react": "^2.5.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@google-cloud/text-to-speech": "^4.2.2",
     "@google-cloud/translate": "^7.2.0",
     "@google-cloud/vision": "^3.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/chrome": "^0.0.224",
+    "@types/react-redux": "^7.1.25",
     "framer-motion": "^10.9.1",
     "html-to-image": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-frame-component": "^5.2.6",
+    "react-icons": "^4.9.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.8",
     "vite-plugin-css-injected-by-js": "^3.0.0"
